force-app/main/default/objects/Event_Notification_Archive__c/Event_Notification_Archive__c.object-meta.xml
<CustomObject>
    <label>Event Notification Archive</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Event Notification Archive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Notification Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>