force-app/main/default/objects/Event_Notification_Archive__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>