force-app/main/default/objects/Event_Notification_Archive__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>